compiler/e2e/test/snapshot/semantic_element/wf_check/where_clause/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/where_clause/main.pnx:18:34
   │
18 │ public type Use['x, 'a, 'b, T] = Constrained['x, 'a, T]:
   │                                  ^^^^^^^^^^^^^^^^^^^^^^ the predicate `'a: 'b` is not satisfied

error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/where_clause/main.pnx:18:34
   │
18 │ public type Use['x, 'a, 'b, T] = Constrained['x, 'a, T]:
   │                                  ^^^^^^^^^^^^^^^^^^^^^^ the predicate `'b: 'a` is not satisfied

error: Compilation aborted due to 2 error(s)



stdout:
